[package]
name = "virulenbot"
version = "0.1.0"
authors = ["Diego Roig <2140622+diegopy@users.noreply.github.com>"]
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
dotenv = "0.15.0"
env_logger = "0.8.3"
log = "0.4.14"
reqwest = { version = "0.10.10", features = ["json"] }
serde_json = "1.0.62"
slog = "2.7.0"
teloxide = "0.3.4"
tokio = { version="0.2.25", features = ["macros", "rt-threaded"]}

[dev-dependencies]
mockall = "0.9.1"
