[package]
name = "virulenbot"
version = "0.1.0"
authors = ["Diego Roig <2140622+diegopy@users.noreply.github.com>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.39"
async-trait = "0.1.48"
config = { version = "0.11.0", features = ["toml", "json"], default-features = false }
dotenv = "0.15.0"
env_logger = "0.8.3"
futures = "0.3.13"
itertools = "0.10.0"
log = "0.4.14"
parking_lot = "0.11.1"
reqwest = { version = "0.11.2", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
teloxide = { version = "0.4.0", features = ["rustls", "macros"], default-features = false }
tokio = { version = "1.4.0", features = ["full"] }
warp = { version = "0.3.0", default-features = false }

[patch.crates-io]
teloxide-core = { git = "https://github.com/diegopy/teloxide-core.git" }
teloxide = { git = "https://github.com/diegopy/teloxide.git", branch = 'dev' }
